fix: merchant APIs issue
